--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#8c5757"
-backgroundColor="#692121"
+backgroundColor="#e7aa54"
 secondaryBackgroundColor="#606060"
 textColor="#ffffff"
