--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,10 @@
 [theme]
-primaryColor="#8c5757"
-backgroundColor="#e7aa54"
-secondaryBackgroundColor="#606060"
-textColor="#ffffff"
+#primaryColor="#8c5757"
+primaryColor="#000D39"
+#backgroundColor="#e7aa54"
+#backgroundColor="#FEFBF6"
+backgroundColor="#feeebc"
+#secondaryBackgroundColor="#606060"
+secondaryBackgroundColor="#fef1cb"
+#textColor="#ffffff"
+textColor="#000D39"
